--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,6 @@
     padding: 0;
     box-sizing: border-box;
 }
-
 body {
     background-color: rgb(20, 3, 3);
     display: flex;
@@ -11,6 +10,7 @@ body {
     height: 100%;
     margin: 0;
 }
+
 header {
     background-color: bisque;
     display: flex;
@@ -30,7 +30,7 @@ header img {
     margin: 15px;
     padding: 0px;
 }
-main{
+main {
     flex: 1;
 }
 .container {
@@ -43,19 +43,19 @@ main{
     gap: 10px;
     grid-auto-flow: row;
     grid-template-areas:
-    "carrusel carrusel form"
+    "carousel carousel form"
     "form__date maps maps";
     margin: 10px;
     padding: 0px;
 }
-.carousel img{
+.carousel img {
     grid-area: carrusel;
     width: 950px;
     height: 650px;
 }
 
-h5,p {
-    background-color:rgb(184, 10, 143);
+h5, p {
+    background-color: rgb(184, 10, 143);
     font-size: 22px;
     color: white;
     font-weight: bold;
@@ -64,24 +64,14 @@ h5,p {
 
 .form {
     grid-area: form;
-}
-
-.maps {
-    grid-area: maps;
-}
-
-
-.form__date {
-    grid-area: form__date;
-    width: 100%;
-    height: 100%;
-}
-
-.form {
     background-color: bisque;
     width: 500px;
     height: 650px;
     padding: 25px;
+}
+
+.maps {
+    grid-area: maps;
 }
 
 .maps iframe {
@@ -91,6 +81,9 @@ h5,p {
 }
 
 .form__date {
+    grid-area: form__date;
+    width: 100%;
+    height: 100%;
     position: relative;
     font-family: 'Courier New', Courier, monospace;
     color: white;
@@ -100,7 +93,7 @@ h5,p {
 }
 
 .form__date img {
-position: absolute;
+    position: absolute;
     width: 150px;
     height: 120px;
     margin: 10px;
@@ -110,15 +103,14 @@ position: absolute;
 .form__date p {
     background-color: rgb(20, 3, 3);
 }
+
 footer {
     background-color: bisque;
     text-align: center;
     padding: 10px;
     font-size: 14px;
-    margin-top: auto;}
-
-
-
+    margin-top: auto;
+} 
 
 
 .inicio__block1{ display: flex;
@@ -354,6 +346,7 @@ border-radius: 40px;
 .prom__oferta p{
     background-color: black;
     font-size: 24px;
-   text-align: center;
+text-align: center;
     color: white;
 }
+
