--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 body {
-    background-color: rgb(20, 3, 3);
+    background-color: rgb(17, 19, 17);
     display: flex;
     flex-direction: column;
     height: 100%;
@@ -32,6 +32,8 @@ header img {
 }
 main {
     flex: 1;
+    width: 100%;
+    padding: 0;
 }
 .container {
     margin: 5px;
@@ -53,33 +55,28 @@ main {
     width: 950px;
     height: 650px;
 }
-
-h5, p {
-    background-color: rgb(184, 10, 143);
+h2, p {
+    display: inline-block;
+    background-color: rgb(32, 7, 26);
     font-size: 22px;
     color: white;
-    font-weight: bold;
+    font-weight: 900;
     border-radius: 10px;
 }
-
 .form {
     grid-area: form;
     background-color: bisque;
     width: 500px;
     height: 650px;
-    padding: 25px;
-}
-
+    padding: 25px;}
 .maps {
     grid-area: maps;
 }
-
 .maps iframe {
     width: 500px;
     height: 450px;
     padding: 10px;
 }
-
 .form__date {
     grid-area: form__date;
     width: 100%;
@@ -127,7 +124,7 @@ footer {
 }
 h1, h2{
     font-size: 28px;
-    color: rgb(237, 28, 188);
+    color: rgb(254, 35, 203);
   text-align: center;
   font-style: italic;
 }
@@ -348,5 +345,192 @@ border-radius: 40px;
     font-size: 24px;
 text-align: center;
     color: white;
+}
+
+@media (max-width: 768px) {
+    body{
+        background-color: rgb(11, 12, 12);
+    } 
+        .container {
+            grid-template-rows: auto;
+            grid-template-columns: 1fr;
+            width: 100vw;
+            height: auto;
+            gap: 15px;
+            align-items: center;
+            grid-template-areas:
+                "carousel"
+                "form"
+                "form__date"
+                "maps";
+            margin: 10px;
+            padding-left: 25px;
+        }
+        .carousel img {
+            width: 100%;
+            height: auto;
+            border-radius: 20px;  
+        }
+        .form{
+            width: 100%;
+            height: auto;
+            padding: 15px;
+            border-radius: 20px;
+        }
+        .form, h2{
+font-weight: bolder;
+color: white;
+        }
+        .maps iframe {
+            width: 100%;
+            height: 250px;
+        }
+        .form__date {
+            width: 100%;
+            height: auto;
+            padding: 10px;
+        }
+        .form__date, h2,h3{
+            font-weight: 900;
+        }
+        .form__date img {
+            width: 50px;
+            height: 50px;
+            margin: 5px;
+        }
+        .form__date iframe{
+            width: 100%;
+            height: auto;
+        }
+        h5, p {
+            font-size: 18px;
+        }
+        nav {
+            font-size: 14px;
+            align-items: center;
+        }
+        header img {
+            width: 100px;
+            height: 90px;
+            border-radius: 20%;
+            margin: 5px;
+            padding: 0px;
+        }
+        main {
+            flex: 1;
+        }
+            .inicio__block1, .inicio__block2 {
+                flex-direction: column;
+            }
+            .inicio img, .inicio__block2 img {
+                margin: 25px;
+                padding:10px ;
+                width: 90%;
+                height: auto;
+            }
+            .inicio__p, .inicio__caja3 p, .inicio__caja4 p, .inicio__caja5 p {
+        margin: 10px;
+            }
+            h1, h2, p {
+                font-size: 24px;
+            }
+}
+@media (max-width: 480px) {
+    .container {
+   padding: 15px;
+        gap: 10px;
+    }
+    .form {
+        padding: 10px;
+        background-color: rgb(2, 2, 44);
+    }
+    .inicio__p, .inicio__caja3 p, .inicio__caja4 p, .inicio__caja5 p {
+        font-size: 16px;
+        padding: 10px;
+    }
+    h1, h2 {
+        font-size: 20px;
+    }
+    p {
+        font-size: 16px;
+    }
+    header {
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        padding: 0;
+    }
+    nav {
+        font-size: 24px;
+        text-align: center;
+        width: 100%;
+    }
+    header img {
+        width: 100px;
+        height: 90px;
+    }
+    footer {
+        font-size: 12px;
+        width: 100%;
+    }
+    .icons i img{
+        width: 50px;
+        height: 50px;
+    }
+}
+@media (max-width: 320px) {
+    .container {
+        width: 100%;
+        padding-left: 10px;
+        gap: 5px;
+    }
+    .form {
+        background-color: rgb(2, 2, 44);
+        padding: 5px;
+    }
+    .inicio__p, .inicio__caja3 p, .inicio__caja4 p, .inicio__caja5 p {
+        font-size: 14px;
+        padding: 5px;
+    }
+    h1, h2 {
+        font-size: 18px;
+    }
+    p {
+        font-size: 14px;
+    }
+    header {
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        padding: 0;
+    }
+    nav {
+        font-size: 18px;
+        text-align: center;
+        text-justify: auto;
+        width: 100%;
+    }
+.inicio__caja1 img {
+    padding: 0;
+        width: 90%;
+        height: 100%;
+    }
+    .inicio__caja2 p{
+        text-align: center;
+        text-align: justify;
+        font-size: 12px;  
+    }
+    h2,p{
+        text-align: center;
+        text-align: justify;
+        font-size: 12px;   
+    }
+    footer, h4, h6 {
+        font-size: 10px;
+        width: 100%;
+    }
+    .icons i img{
+        width: 25px;
+    }
 }
 
