--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,14 +1,565 @@
-header {
-  background-color: rgb(196, 255, 197);
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box; }
+
+body {
+  background-color: #0a0a0a;
   display: flex;
   flex-direction: column;
-  align-items: center; }
+  width: 100%;
+  height: 100%;
+  margin: 0; }
+
+header {
+  background-color: bisque;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-bottom: 3px solid white;
+  margin-bottom: 10px; }
   header nav {
-    font-size: 2.5rem; }
-  header img {
-    width: 140px;
-    height: 130px;
+    font-size: 2rem;
+    font-weight: 900; }
+
+header nav .navbar-nav .nav-link :active, a:hover {
+  transition: 1s;
+  font-size: 2.7rem;
+  border-radius: 30px;
+  border: 4px solid white; }
+
+.logo img {
+  width: 110px;
+  height: 100px;
+  border-radius: 20%;
+  border: 2px solid black;
+  margin: 15px;
+  padding: 0px; }
+
+main {
+  flex: 1;
+  width: 100%;
+  padding: 0; }
+
+.inicio .inicio__block1 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%; }
+  .inicio .inicio__block1 .inicio__caja1 img {
+    width: 700px;
+    height: 500px;
+    margin: 10px;
+    border-radius: 20px;
+    border: 3px solid white; }
+  .inicio .inicio__block1 .inicio__caja2 h1 {
+    font-size: 2rem;
+    color: bisque;
+    text-align: center;
+    font-style: italic;
+    font-weight: 800; }
+  .inicio .inicio__block1 .inicio__caja2 .inicio__p {
+    font-size: 24px;
+    color: white;
+    text-align: justify;
+    margin: 10px;
+    padding: 15px; }
+
+.inicio .inicio__block2 {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  width: 100%; }
+  .inicio .inicio__block2 h2 {
+    font-size: 2rem;
+    font-weight: 800;
+    color: bisque;
+    text-align: center; }
+    .inicio .inicio__block2 h2:hover {
+      display: inline-block;
+      background-color: bisque;
+      color: #750861;
+      border-radius: 20px;
+      border: 3px solid white; }
+  .inicio .inicio__block2 p {
+    font-size: 1.8rem;
+    font-weight: bold;
+    color: white;
+    text-align: center; }
+
+.inicio .inicio__block3 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center; }
+  .inicio .inicio__block3 img {
+    width: 475px;
+    height: 400px;
+    margin: 15px;
+    border-radius: 20px;
+    border: 3px solid white; }
+  .inicio .inicio__block3 p {
+    font-size: 1.2rem;
+    color: white;
+    text-align: justify;
+    text-align: center;
+    padding: 15px; }
+
+.container {
+  margin: auto;
+  display: grid;
+  justify-content: center;
+  grid-template-rows: 0.7fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
+  width: 100vw;
+  height: 100vh;
+  gap: 20px;
+  grid-auto-flow: row;
+  grid-template-areas: "carousel carousel form" "form__date maps maps";
+  padding: 10px; }
+  .container .carousel {
+    grid-area: carousel; }
+    .container .carousel img {
+      width: 100%;
+      height: 100%; }
+    .container .carousel h1,
+    .container .carousel h2 {
+      display: inline-block;
+      background-color: #20071a;
+      font-size: 2rem;
+      color: white;
+      font-weight: 900;
+      border-radius: 10px; }
+  .container .form {
+    grid-area: form;
+    background-color: bisque;
+    width: 100%;
+    height: auto;
+    padding: 25px; }
+    .container .form h2 {
+      display: inline-block;
+      background-color: #20071a;
+      font-size: 2rem;
+      color: white;
+      font-weight: 700;
+      border-radius: 10px;
+      border: 3px solid #fdfcfd; }
+  .container .maps {
+    grid-area: maps;
+    grid-column: auto;
+    font-size: 1.5rem;
+    color: white; }
+    .container .maps iframe {
+      width: 100%;
+      height: 45%;
+      padding: 10px; }
+  .container .form__date {
+    grid-area: form__date;
+    grid-column: 1/3;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: auto;
+    position: relative;
+    font-family: 'Courier New', Courier, monospace;
+    color: white;
+    padding: 10px; }
+    .container .form__date img {
+      position: absolute;
+      width: 75px;
+      height: 60px;
+      margin: 50px;
+      margin-left: 5px;
+      border-radius: 20%;
+      border: 2px solid black; }
+    .container .form__date h3 {
+      font-size: 32px;
+      font-weight: 800; }
+    .container .form__date p {
+      color: white;
+      font-size: 1.5rem;
+      font-weight: 600;
+      text-align: justify; }
+
+.novedades .nov__text h1 {
+  font-size: 2.5rem;
+  font-weight: 900;
+  text-align: center;
+  color: bisque; }
+
+.novedades .nov__text h2 {
+  font-size: 2rem;
+  font-weight: 700;
+  text-align: center;
+  color: bisque; }
+
+.novedades img {
+  width: 670px;
+  height: 500px;
+  margin: 10px;
+  border-radius: 20px;
+  border: 3px solid white; }
+
+.novedades .nov__block1 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  flex-wrap: wrap; }
+  .novedades .nov__block1 p {
+    font-size: 1.7rem;
+    color: bisque; }
+  .novedades .nov__block1 .nov__caja1,
+  .novedades .nov__block1 .nov__caja2,
+  .novedades .nov__block1 .nov__caja3,
+  .novedades .nov__block1 .nov__caja4 {
+    position: relative; }
+  .novedades .nov__block1 h3 {
+    position: absolute;
+    top: 0;
+    margin: 20px;
+    padding: 5px;
+    background-color: #5fac70;
+    color: white;
+    border-radius: 40px; }
+    .novedades .nov__block1 h3:hover {
+      background-color: #e887d0;
+      color: black; }
+
+.productos .prod__block1 {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 100%; }
+  .productos .prod__block1 img {
+    width: 670px;
+    height: 600px;
+    margin: 10px;
+    border-radius: 20px;
+    border: 3px solid #e8b474; }
+
+.productos h1,
+.productos p {
+  font-size: 2rem;
+  font-weight: 900;
+  color: bisque;
+  text-align: center;
+  font-style: italic; }
+
+.productos h3 {
+  font-size: 2rem;
+  font-weight: 700;
+  text-align: center;
+  color: #ebdccb; }
+
+.promociones {
+  flex: 1;
+  justify-content: center;
+  text-align: center;
+  color: white;
+  text-align: justify;
+  width: 100%;
+  height: auto; }
+  .promociones .prom__text h1, .promociones .prom__text p {
+    font-size: 2rem;
+    font-weight: 900;
+    color: bisque;
+    text-align: center; }
+  .promociones .prom__block1 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    width: 100%;
+    gap: 10px; }
+    .promociones .prom__block1 img {
+      width: 650px;
+      height: 500px;
+      border: 3px solid white;
+      border-radius: 20px; }
+    .promociones .prom__block1 p {
+      font-size: 2rem; }
+    .promociones .prom__block1 h3 {
+      position: absolute;
+      top: 0;
+      margin: 20px;
+      padding: 5px;
+      background-color: #5fac70;
+      color: white;
+      border-radius: 40px; }
+      .promociones .prom__block1 h3:hover {
+        background-color: red;
+        color: black; }
+    .promociones .prom__block1 .prom__caja1,
+    .promociones .prom__block1 .prom__caja2,
+    .promociones .prom__block1 .prom__caja3,
+    .promociones .prom__block1 .prom__caja4,
+    .promociones .prom__block1 h2 {
+      position: relative; }
+  .promociones .prom__oferta h3,
+  .promociones .prom__oferta p {
+    font-size: 2rem;
+    font-weight: 800;
+    text-align: center;
+    color: white; }
+
+footer {
+  background-color: bisque;
+  text-align: center;
+  padding: 10px;
+  font-size: 14px;
+  margin-top: auto;
+  border-top: 3px solid white; }
+  footer .icons i img {
+    width: 60px;
+    height: 50px; }
+
+@media (max-width: 950px) {
+  header nav .navbar-nav a {
+    transition: 1s;
+    font-size: 1.6rem; }
+  header .logo img {
+    width: 110px;
+    height: 100px;
     border-radius: 20%;
     border: 2px solid black;
     margin: 15px;
-    padding: 0px;}
+    padding: 0px; }
+  footer .icons i img {
+    width: 50px;
+    height: 40px; }
+  footer h4 {
+    font-size: 1.2rem; }
+  .container {
+    margin: auto;
+    overflow: hidden;
+    grid-template-rows: auto;
+    grid-template-columns: 1fr;
+    grid-template-areas: "carousel" "form" "form__date" "maps";
+    height: auto; }
+  .container .form {
+    width: 90%;
+    height: auto;
+    padding: 25px;
+    margin: 35px;
+    border-radius: 20px;
+    text-align: center; }
+  .container .maps iframe {
+    width: 100%;
+    height: auto; }
+  .container .form__date {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column; }
+  .container .form__date img {
+    position: absolute;
+    width: 80px;
+    height: 70px;
+    margin-top: 45px;
+    margin-left: 5px;
+    border-radius: 20%;
+    border: 2px solid black; }
+  .container .form__date p {
+    color: white;
+    font-size: 1.2rem;
+    font-weight: 600;
+    text-align: justify; }
+  .promociones .prom__block1 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    gap: 10px; }
+  .promociones .prom__block1 img {
+    width: 400px;
+    height: 400px; }
+  .promociones .prom__block1 h2,
+  .prom__block1 h3,
+  .prom__block1 p {
+    font-size: 1.5rem; }
+  .inicio .inicio__block1 {
+    display: flex;
+    flex-direction: column;
+    width: 100%; }
+  .inicio .inicio__block2 {
+    display: flex;
+    flex-direction: column;
+    text-align: center; }
+  .inicio .inicio__block3 {
+    display: flex;
+    flex-direction: column;
+    width: 100%; }
+  .inicio .inicio__block1 .inicio__caja1 img {
+    width: 875px;
+    height: 500px;
+    border-radius: 20px;
+    border: 3px solid white; }
+  .inicio .inicio__block3 img {
+    width: 875px;
+    height: 500px;
+    margin: 15px;
+    border-radius: 20px;
+    border: 3px solid white; }
+  .inicio .inicio__block3 p {
+    font-size: 1.2rem; }
+  .novedades .nov__block1 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    margin-top: 10px; }
+  .novedades .nov__text h1 {
+    font-size: 2rem;
+    font-weight: 900;
+    text-align: center;
+    color: bisque; }
+  .novedades .nov__text h2 {
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: white; }
+  .novedades img {
+    width: 400px;
+    height: 400px;
+    margin-bottom: 20px;
+    border-radius: 20px;
+    border: 3px solid white; }
+  .productos .prod__block1 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%; }
+  .productos .prod__block1 img {
+    width: 400px;
+    height: 400px;
+    border-radius: 20px; }
+  .productos h1 {
+    font-size: 2rem;
+    font-weight: 900;
+    color: bisque;
+    text-align: center;
+    font-style: italic; }
+  .productos p {
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: bisque; } }
+
+@media (max-width: 768px) {
+  header nav .navbar-nav a {
+    transition: 1s;
+    font-size: 1.5rem; }
+  header .logo img {
+    width: 100px;
+    height: 90px;
+    border-radius: 20%;
+    border: 2px solid black;
+    margin: 15px;
+    padding: 0px; }
+  footer .icons i img {
+    width: 50px;
+    height: 40px; }
+  footer h5 {
+    font-size: 1.1rem; }
+  .container {
+    margin: auto;
+    overflow: hidden;
+    grid-template-rows: auto;
+    grid-template-columns: 1fr;
+    grid-template-areas: "carousel" "form" "form__date" "maps";
+    height: auto; }
+  .promociones .prom__block1 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    gap: 10px; }
+  .promociones .prom__block1 img {
+    width: 340px;
+    height: 340px; }
+  .promociones .prom__block1 .prom__caja1 h3,
+  .prom__block1 .prom__caja2 h3,
+  .prom__block1 .prom__caja3 h3,
+  .prom__block1 .prom__caja4 h3 {
+    font-size: 1.2rem;
+    background-color: black; }
+  .promociones .prom__oferta h3 {
+    font-size: 1.5rem; }
+  .promociones .prom__block1 h2,
+  .prom__block1 h3,
+  .prom__block1 p {
+    font-size: 1.4rem;
+    margin: 5px; }
+  .inicio .inicio__block1 {
+    display: flex;
+    flex-direction: column;
+    width: 100%; }
+  .inicio .inicio__block2 {
+    display: flex;
+    flex-direction: column;
+    text-align: center; }
+  .inicio .inicio__block3 {
+    display: flex;
+    flex-direction: column;
+    width: 100%; }
+  .inicio .inicio__block1 .inicio__caja1 img {
+    width: 675px;
+    height: 500px;
+    border-radius: 20px;
+    border: 3px solid white; }
+  .inicio .inicio__block3 img {
+    width: 675px;
+    height: 500px;
+    border-radius: 20px;
+    border: 3px solid white; }
+  .inicio .inicio__block3 p {
+    font-size: 1.2rem; }
+  .novedades .nov__block1 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    margin-top: 10px; }
+  .novedades .nov__text h1 {
+    font-size: 1.5rem;
+    font-weight: 900;
+    text-align: center;
+    color: bisque; }
+  .novedades .nov__text h2 {
+    font-size: 1.2rem;
+    font-weight: 700;
+    color: white; }
+  .novedades .nov__block1 h3 {
+    background-color: black;
+    font-size: 1.2rem;
+    font-weight: 700;
+    color: white; }
+  .novedades .nov__block1 p {
+    font-size: 1.1rem; }
+  .novedades img {
+    width: 375px;
+    height: 300px;
+    margin-bottom: 20px;
+    border-radius: 20px;
+    border: 3px solid white; }
+  .productos .prod__block1 {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%; }
+  .productos .prod__block1 img {
+    width: 375px;
+    height: 300px;
+    border-radius: 20px; }
+  .productos h1 {
+    font-size: 1.7rem;
+    font-weight: 900;
+    color: bisque;
+    text-align: center;
+    font-style: italic; }
+  .productos p {
+    font-size: 1.3rem;
+    font-weight: 700;
+    color: bisque; } }
