--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,17 +1,5 @@
-header{
-    background-color: rgb(196, 255, 197); 
-    display: flex; 
-    flex-direction: column; 
-    align-items: center;
-header nav{
-        font-size: 2.5rem
-    } 
-header img{
-    width: 140px;
-    height: 130px;
-    border-radius: 20%;
-    border: 2px solid black;
-    margin: 15px;
-    padding: 0px;
-    }
-}
+@import "./base/generales";
+@import "./components/header";
+@import "./components/main";
+@import "./components/footer";
+@import "./base/mediaquerys";
